[package]
name = "lucq"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
home = "^0"
rusqlite = { version = "^0", features = ["bundled"] }
