[package]
name = "lucq"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
ctrlc = "^3"
home = "^0"
once_cell = "^1"
rusqlite = { version = "^0", features = ["bundled"] }
